--- a/Pics.html
+++ b/Pics.html
@@ -13,19 +13,19 @@
   <div class="gallery">
     
 
-    <img src="myspace-pics/wade2.jpg" height="180" width="240" alt="">
+    <img src="myspace-pics/wade2.jpg" height="200" width="240" alt="" class="wade-one">
 
     <figure>
-      <img src="myspace-pics/wade4.jpg" height="180" width="240" alt="">
+      <img src="myspace-pics/wade4.jpg" height="200" width="240" alt="" class="wade-two">
       <figcaption>throwback</figcaption>
     </figure>
 
-    <img src="myspace-pics/wade5.jpg" height="180" width="240" alt="">
+    <img src="myspace-pics/wade5.jpg" height="200" width="240" alt="" class="wade-three">
 
-    <img src="myspace-pics/wade6.jpg" height="180" width="240" alt="">
+    <img src="myspace-pics/wade6.jpg" height="200" width="240" alt="" class="wade-four">
 
     <figure>
-      <img src="myspace-pics/wade7.jpg" height="180" width="240" alt="">
+      <img src="myspace-pics/wade7.jpg" height="200" width="240" alt="" class="wade-five">
       <figcaption>Vegas 2019!</figcaption>
     </figure>
   </div>
